spacing fix

--- a/web/src/pages/Landing/LandingLoggedIn.scss
+++ b/web/src/pages/Landing/LandingLoggedIn.scss
@@ -1,7 +1,7 @@
 .landing-logged-in {
-  margin-top: 230px;
+  margin-top: 200px;
   height: 100%;
-  margin-bottom: 200px;
+  margin-bottom: 0px;
 
   .logo {
     width: 256px;
